Hoan Thanh front-end

--- a/WebContent/resources/event-add-css.css
+++ b/WebContent/resources/event-add-css.css
@@ -30,7 +30,7 @@ body{
     text-transform: uppercase;
     color: white;
     font-weight: bold;
-    position: fixed;
+    position: sticky;
 }
 
 @keyframes toUp{
