--- a/WebContent/resources/assignment.css
+++ b/WebContent/resources/assignment.css
@@ -1,17 +1,18 @@
 .div-assignment{
     margin: 0 auto;
     width: 70%;
-    height: 300px;
+    min-height: 100px;
+    max-height: 700px;
     box-shadow: 0px 10px 20px 0px black;
+    padding-bottom: 50px;
 }
-.ul-assignment li{
+.div-assignment li{
     list-style: none;
     clear: left;
     margin-top:10px;
 }
 .div-assignment-roadmap{
     width: 90%;
-    height: 30px;
     margin-left: 10px;
     margin-bottom: 10px;
     display: none;
@@ -20,4 +21,17 @@
     float: left;
     margin-right: 20px;
     color: blue;
+}
+.table{
+	margin-top:20px;
+}
+
+.btn-danger, .btn-success{
+	width: 80px;
+}
+.btn-confirm{
+	position: absolute;
+	width: 120px;
+	left: 50%;
+	transform: translate(-50%, 0);
 }
