--- a/WebContent/resources/css.css
+++ b/WebContent/resources/css.css
@@ -135,6 +135,39 @@ body{
     animation-duration: 1s;
     animation-fill-mode: both;
 }
+
+/* Quen mat khau */
+@keyframes leftIn{
+    0%{
+        transform: translate(0%, 0);
+    }
+    100%{
+        transform: translate(-100%, 0);
+    }
+}
+.leftIn{
+    animation-name: leftIn;
+    animation-duration: 1s;
+    animation-fill-mode: both;
+}
+
+@keyframes rightIn{
+    0%{
+        transform: translate(-100%, 0);
+    }
+    100%{
+        transform: translate(0%, 0);
+    }
+}
+.rightIn{
+    animation-name: rightIn;
+    animation-duration: 1s;
+    animation-fill-mode: both;
+}
+
+
+
+
 .div-login, .div-add-teacher, .div-edit-teacher, .div-add-student, .div-edit-student, .div-student-in-event, .div-teacher-in-event{
     width: 450px;
     height: 400px;
@@ -151,6 +184,19 @@ body{
     visibility: hidden;
     z-index: 10;
 }
+
+.div-login{
+	overflow: hidden;
+}
+
+#div-forgot-form{
+	z-index: 100;
+	position: absolute;
+	left: 100%;
+	width: 450px;
+	height: 200px;
+}
+
 .div-add-student, .div-edit-student{
     height: 550px;
 }
@@ -246,12 +292,16 @@ body{
 
 
 
-.a-login-quit{
+.a-login-quit, .a-login-back{
     text-decoration: none;
     font-size: 26px;
     position: absolute;
     right: 2%;
     top: 0%;
+}
+.a-login-back{
+	left: 2%;
+	right: auto;
 }
 .a-login-quit:hover{
     color: red;
