--- a/WebContent/resources/css.css
+++ b/WebContent/resources/css.css
@@ -352,9 +352,10 @@ body{
     margin: auto;
 }
 .div-teacher-left{
+	position: relative;
     border: 1px #3f8eae solid;
-    float: left;
-    width: 66%;
+ 	margin: 0 auto;
+    width: 100%;
     height: 100%;
 }
 .div-teacher-right{
@@ -493,7 +494,7 @@ body{
     margin-top: 5px;
     border-radius: 2px;
     outline: none;
-    border: none;
+    border: 1px black solid;
 }
 .div-search input:focus{
     /* border: 2px solid #3f8eae; */
@@ -519,9 +520,9 @@ body{
     height: 400px;
     border: #14607e 1px solid;
     box-shadow: 0px 6px 6px 6px gray;
-    text-align: center;
+    position: relative;
 }
-.div-project-info p:first-child{
+.p-project-title{
     width: 100%;
     height: 50px;
     line-height: 50px;
@@ -531,6 +532,31 @@ body{
     font-weight: bold;
     color: white;
 }
+.p-project-name{
+    color: #FF3A00;
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 22px;
+}
+.div-project-main{
+	position: relative;
+	width: 100%;
+	height: 170px;
+	display: flex;
+  	flex-flow: column wrap;
+}
+.p-project-more{
+	font-style: italic;
+	max-width: 80%;
+	margin: 0 auto;
+	animation-name: fadeInLeft;
+    animation-duration: 1s;
+    animation-fill-mode: both;
+    animation-delay: 4.5s;
+    margin-left: -45px;
+}
+
 @keyframes fadeInLeft{
     0%{
         opacity: 0;
@@ -538,46 +564,47 @@ body{
     }
     100%{
         opacity: 1;
-        transform: translate(0,0);
+        transform: translate(20%,0);
     }
 }
-.div-project-info p:nth-child(n+2){
-    color: red;
+
+.div-project-main p{
     animation-name: fadeInLeft;
     animation-duration: 1s;
     animation-fill-mode: both;
 }
-.div-project-info p:nth-child(2){
-    color: #0c7099;
-    text-align: center;
-    text-transform: uppercase;
-    font-weight: bold;
-    font-size: 22px;
+
+.div-project-main p:nth-child(1){
+    color: #0003FF;
     animation-delay: 0.5s;
 }
-.div-project-info p:nth-child(3){
-    color: #0c7099;
+.div-project-main p:nth-child(2){
+    color: #c7bc08;
     animation-delay: 1s;
 }
-.div-project-info p:nth-child(4){
-    color: #0c7099;
+.div-project-main p:nth-child(3){
+    color: green;
     animation-delay: 1.5s;
 }
-.div-project-info p:nth-child(5){
-    color: #fc6b58;
+.div-project-main p:nth-child(4){
+    color: #FF00FE;
     animation-delay: 2s;
 }
-.div-project-info p:nth-child(6){
-    color: blue;
+.div-project-main p:nth-child(5){
+    color: #0003FF;
     animation-delay: 2.5s;
 }
-.div-project-info p:nth-child(7){
+.div-project-main p:nth-child(6){
     color: #c7bc08;
     animation-delay: 3s;
 }
-.div-project-info p:nth-child(8){
+.div-project-main p:nth-child(7){
     color: green;
     animation-delay: 3.5s;
+}
+.div-project-main p:nth-child(8){
+    color: #FF00FE;
+    animation-delay: 4s;
 }
 .div-event{
     width: 70%;
