--- a/WebContent/resources/css.css
+++ b/WebContent/resources/css.css
@@ -96,8 +96,8 @@ body{
     text-decoration: underline;
 }
 .div-content img{
-    width: 130px;
-    height: 150px;
+    width: 100px;
+    height: 120px;
     float: left;
     margin-right: 30px;
     
@@ -321,7 +321,7 @@ body{
 }
 .div-add-teacher p, .div-edit-teacher p, .div-add-student p, .div-edit-student p, .div-student-in-event p, .div-teacher-in-event p{
     margin: 0;
-    height: 8%;
+    height: 30px;
     line-height: 30px;
     color: white;
     font-size: 18px;
@@ -475,11 +475,21 @@ body{
     color: #14607e;
 }
 .div-student-content{
+    margin: 0 auto;
     width: 70%;
-    margin: auto;
-    /* background: pink; */
-    height: 1000px;
+    min-height: 100px;
+    box-shadow: 0px 10px 20px 0px #405DE0;
+    padding: 20px 20px 50px 20px;
+    display: block;
 }
+
+.div-student-table-border{
+	width: 100%;
+	height: 100%;
+	border: 1px #41A2FF solid;
+	margin-top: 20px;
+}
+
 .div-student-content table{
     margin: 0 auto;
 }
@@ -489,7 +499,6 @@ body{
     margin-bottom: 30px;
 }
 .div-search input{
-    float: left;
     margin-right: 30px;
     margin-top: 5px;
     border-radius: 2px;
