--- a/WebContent/resources/bar-chart.css
+++ b/WebContent/resources/bar-chart.css
@@ -3,5 +3,6 @@
 	width: 70%;
 	min-height: 100px;
 	margin: 0 auto;
-	border: 1px #139CD5 solid;
+	padding: 30px;
+    box-shadow: 0px 10px 20px 0px #405DE0;
 }
