--- a/WebContent/resources/css.css
+++ b/WebContent/resources/css.css
@@ -184,6 +184,12 @@ body{
     visibility: hidden;
     z-index: 10;
 }
+.div-add-teacher{
+	height: 60%;
+}
+.div-add-student{
+	height: 550px;
+}
 
 .div-profile{
 	display: block;
@@ -327,6 +333,16 @@ body{
     font-size: 18px;
     background: #3f8eae;
 }
+.p-dssv{
+	margin: 0 auto;
+	width: 70%;
+	height: 40px;
+	color: white;
+    font-size: 16px;
+    background: #3f8eae;
+    font-weight: bold;
+    padding-left: 5px;
+}
 
 
 
@@ -350,6 +366,7 @@ body{
     width: 70%;
     min-height: 300px;
     margin: auto;
+    box-shadow: 0px 10px 20px 0px #405DE0;
 }
 .div-teacher-left{
 	position: relative;
@@ -366,6 +383,7 @@ body{
     border: 1px #3f8eae solid;
 }
 .div-department{
+	width: 100%;
     background: #3f8eae;
     display: inline-block;
     padding-left: 5px;
@@ -392,6 +410,19 @@ body{
     height: 150px;
     margin: 20px auto;
     border: 1px #3f8eae solid;
+}
+.div-delete-teacher-confirm, .div-delete-student-confirm, .div-delete-account-confirm{
+	z-index: 1;
+    position: fixed;
+    left: 50%;
+    margin-top: 100px;
+	transform: translate(-50%, -200%);
+   	width: 30%;
+    height: 100px;
+    background-color: white;
+    border: 1px black solid;
+    border-radius: 5px;
+    padding-bottom: 50px;
 }
 .teacher-edit{
     position: absolute;
@@ -617,13 +648,17 @@ body{
 }
 .div-event{
     width: 70%;
-    height: 100px;
+    min-height: 100px;
     margin: 0 auto;
+    box-shadow: 0px 10px 20px 0px #405DE0;
+    padding: 30px;
 }
 .div-event-info{
     width: 70%;
     margin: 0 auto;
-    height: 100px;
+    min-height: 100px;
+    padding: 30px;
+    box-shadow: 0px 10px 20px 0px #405DE0;
 }
 .div-detail{
     width: 100%;
@@ -639,7 +674,7 @@ body{
 }
 .table-deparment{
     border: 1px #3f8eae solid;
-    width: 700px;
+    width: 100%;
 }
 .table-deparment tr{
     border-bottom: 1px #3f8eae solid;
